# beacon-fuzz-corpora

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
0-6-0/: README.md
0-7-0/: README.md
0-7-0/minimal/beaconstate/: 1  10  100  1002  1003  1005  1006  1010  1014  1017  103  1030  1031  1036  1041  1046  1047  1049  105  1052  1056  1058  1059  1061  1062  1064  1065  1068  107  1070  1071  1072  1074  1078  1080  1082  1083  1084  1085  1086  (+834 more)
0-8-3/: README.md
0-8-3/mainnet/beaconstate/: 15  17
0-9-1/: README.md
0-9-1/mainnet/beaconstate/: 11  19  22  25  29  31  32  33  34  36  37  38  39  4  44  45  5  8
0-9-2/mainnet/beaconstate/: 1  10  13  14  15  16  19  2  20  21  23  30  32  33  34  36  41  46  49  50  51  53  54  56  57  58  6  60  61  62  63  64  65  66  67  68  69  70  71  72  (+26 more)
beacon_fuzz_corpora_tools/: all_corpora_from_tests.py  corpora_from_tests.py
scripts/: all_corpora_from_tests.py  corpora_from_tests.py
state-corpus-v07-minimal/: 1000  1001  1004  1007  1008  1009  101  1012  1013  1016  1019  1020  1021  1022  1023  1024  1025  1026  1027  1029  1032  1033  1035  1037  1038  1039  104  1040  1042  1043  1044  1045  1048  1050  1051  1053  1054  1055  1057  106  (+1124 more)
